# PhysicalAI

./: .dockerignore  .env.example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/model/: groot.yaml  openvla.yaml
configs/training/: groot_lora.env  libero_lora.env  openvla_lora.env  openvla_lora.yaml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.train  Dockerfile.train.dockerignore  Dockerfile.train.groot  Dockerfile.train.groot.dockerignore
docs/blog/: 01_openvla_libero_finetuning.md
docs/research/: vlm_vla_overview.md
scripts/: collect_data.py  deploy.sh  download_dataset.py  eval_groot_offline.sh  evaluate.py  finetune.py  setup_groot_gpu.sh  setup_lambda.sh  train.py  train.sh  train_groot.sh
src/evaluation/: metrics.py
src/inference/: policy.py
src/models/vla/: openvla.py
src/physicalai/evaluation/: rollout.py
src/physicalai/inference/: __init__.py  policy.py  server.py
src/physicalai/models/vla/: __init__.py  groot.py  openvla.py
src/physicalai/training/: trainer.py
src/physicalai/training/datasets/: __init__.py  bridge_dataset.py
src/physicalai/utils/: checkpoint.py  config.py
src/training/: trainer.py
src/utils/: config.py  logging.py  viz.py
tests/: conftest.py
tests/integration/: test_train_cli.py
tests/unit/: test_bridge_dataset.py  test_checkpoint.py  test_config.py  test_finetune_script.py  test_groot_config.py  test_groot_model.py  test_openvla_model.py  test_policy.py  test_trainer_config.py
