[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physicalai"
version = "0.1.0"
description = "Embodied AI research: LLMs, VLMs, and Vision Language Action models"
authors = [{ name = "Shantanu Singh" }]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
    "einops>=0.7",
    "transformers>=4.40",

    # Config management
    "hydra-core>=1.3",
    "omegaconf>=2.3",

    # Experiment tracking
    "wandb>=0.16",

    # Utilities
    "tqdm>=4.66",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
]
inference = [
    "accelerate>=0.27",
    "bitsandbytes>=0.43",
]
robot = [
    # Add simulator / hardware deps here, e.g.:
    # "mujoco>=3.0",
    # "gymnasium>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
